--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "geometric": "^2.5.5",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "simplex-noise": "^4.0.3"
   }
 }
